web/cobrands/sass/_layout.scss
/* ... */
// two thirds width page, also has option for a sidebar which can be sticky or not
body.twothirdswidthpage {
  .container {
    // This used to be on all containers, but there was a bug in Chrome, so now
    // it's just here so that the sidebar links are still clickable with their
    // negative z-index.
    z-index: 1;
  }
  .content {
    width:40em;
    position: relative;
    aside {
      background:#eee;
      position:absolute;
      #{$left}: 42em;
      top:0;
      z-index: -1;
      width:13em;
      padding:1em;
      @include box-shadow(0px 0px 6px 1px #000);
      h2 {
        margin-top: 0;
      }
      img {
        margin-bottom: 0.25em;
      }
    }
    .sticky-sidebar {
      position: absolute;
      #{$left}: 42em;
      z-index: -1;
      aside {
        position: fixed;
        top:7em;
        #{$left}: auto;
      }
    }
  }
}
//as ie6 doesn't like 'fixed' we will make it absolute again
.ie6 body.twothirdswidthpage .content .sticky-sidebar {
  position:static;
  aside {
    position:absolute;
    #{$left}: 42em;
    top:0;
  }
}

// Centre the login and password change pages,
// but keep them narrow to match the report sidebar
body.authpage {
  .content {
    margin-#{$left}: auto;
    margin-#{$right}: auto;
    margin-bottom: 0;
    box-shadow: none;
    padding: 1em; // same as .twothirdswidthpage .content
  }
}


// table wrapper - this enables anything to become a
// table with div children as table cells
.tablewrapper {
  display:table;
  width:100%;
  padding: 0 0 1em;
  >div {
    display:table-cell;
    width:50%;
  }
  .full-width {
    width:auto;
    margin:0;
  }
}

//fix table to be a block for ie, float the children
.ie6, .ie7 {
  .tablewrapper {
    display:block;
    div {//ie6 doesn't support '>div', so we'll go with the somewhat risker 'div'
      width:48%;
      display:block;
      float: $left;
      border:none !important;
    }
  }
}

// adds border to the top and goes full width
.bordered {
  margin:0 -1em;
  padding:0 1em;
  width:auto;
  border-top:0.25em solid $primary;
}

//footer blocks
#footer-mobileapps {
  border-#{$right}: 1em solid transparent;
  background:none;
  padding:0;
  @include box-shadow(inset rgba(0, 0, 0, 0) 0 0 0);
  h2 {
    color:#222;
    margin-top:0;
  }
  p {
	  border-bottom:none;
  }
}
.ie6, .ie7 {
  #footer-mobileapps {
      margin:0 0.5em;
      margin-#{$right}: 2%;
  }
}

#footer-help {
  border-#{$left}: 1em solid transparent;
  ul {
    display:table;
    li {
      display:table-cell;
      border-bottom:none;
      &:last-child {
        border-#{$left}: 1.25em solid transparent;
      }
    }
  }
}
.ie6, .ie7 {
  #footer-help {
    margin-#{$left}: 2%;
    ul {
      width:100%;
      li {
        float: $left;
        width: 45%;
      }
    }
  }
}

// map box (fallback for non js really as most users
// will have fullscreen map)
#map_box{
  position: absolute;
  height: 29em;
  width: 29em;
  #{$right}: 1em;
  top: 3em;
  z-index:1;
}

// Openlayers map controls (overrides)
#fms_pan_zoom_panup,
#fms_pan_zoom_pandown,
#fms_pan_zoom_panleft,
#fms_pan_zoom_panright,
#fms_pan_zoom_zoomin,
#fms_pan_zoom_zoomout {
  opacity: 0.85;
  &:hover {
    opacity: 1;
  }
}

// push zoom back over to right
#fms_pan_zoom_zoomin {
  #{$left}: auto;
  #{$right}: 30px;
  top: 130px;
}
#fms_pan_zoom_zoomout {
  #{$left}: auto;
  #{$right}: 30px;
  top: 174px;
}

.olControlAttribution {
  bottom:0.5em !important;
  #{$left}: auto !important;
}

#sub_map_links {
  #{$left}: auto;
  bottom: 2em;
  #map_links_toggle {
    display:block;
    cursor: pointer;
    position:absolute;
    #{$left}: -0.97em; /* 1em leaves a tiny gap, font issue */
    width: 1em;
    height:100%;
    background:#000 inline-image("../fixmystreet/images/triangle-grey-#{$right}.svg") 50% 50% no-repeat;
    @include border-radius(flip(0.25em 0 0 0.25em, 0 0.25em 0.25em 0));
    &:hover {
      #{$left}: -1.5em;
      //use border so we don't have to redefine the background-position
      border-#{$right}: 0.5em solid #000;
    }
    &.closed {
      background-image: inline-image("../fixmystreet/images/triangle-grey-#{$left}.svg");
    }
  }
}
.iel8 #sub_map_links #map_links_toggle {
    height: 1.75em;
    background: #000 url('/cobrands/fixmystreet/images/ie_sub_map_links_sprite.gif') center -143px no-repeat;
    &.closed {
      background-position: center -183px;
    }
}


// Wraps around #key-tools box - sticks to the bottom of the screen on desktop
.shadow-wrap {
  position:fixed;
  z-index:10; //this is just to ensure anythign inside .content that has position set goes sites it
  bottom: 0;
  width: 29em;
  overflow: hidden;
  padding-top: 3em;
  ul#key-tools {
    border-top: 0.25em solid $primary;
    margin: 0;
    @include box-shadow(-0em 0px 1em 1em #fff);
    li {
      border:none;
      a, input[type=submit] {
        font-size: 0.75em;
        color:#666;
        padding: flip(0.5em 1.5em 0.5em 0, 0.5em 0 0.5em 1.5em);
        text-transform:none;
        &.abuse {
          background-image:url($image-sprite);
          background-position: flip(right, -337px) -2935px;
        }
        &.feed {
          background-image:url($image-sprite);
          background-position: flip(right, -337px) -3074px;
        }
        &.share {
          min-width: 5em;
          background-image: url(/cobrands/fixmystreet/images/share.png);
          background-position: flip(80%, 20%) 50%;
        }
        &.chevron {
          border-#{$right}: solid 1em transparent;
          padding-#{$right}: 0.5em;
          background-position: $right 50%;
          background-size: 12px 15px;
        }
        &.hover {
          background-image:url($image-sprite);
          background-position: flip(right, -337px) -1876px;
        }
      }
    }
    &.singleton {
      li {
        text-align: $right;
        a {
          padding-#{$right}: 3em;
        }
      }
    }
  }
  &.static {
    padding: 0 0 1em;
    position: static;
  }
}
/* ... */

